src/main/kotlin/in/srikanthk/devlabs/kchopdebugger/language/KarateParser.bnf
{
  parserClass = "in.srikanthk.devlabs.kchopdebugger.language.KarateParser";
  extends = "com.intellij.extapi.psi.ASTWrapperPsiElement";

  psiClassPrefix = "Karate";
  psiImplClassSuffix = "Impl";
  psiPackage = "in.srikanthk.devlabs.kchopdebugger.language.psi";
  psiImplPackage = "in.srikanthk.devlabs.kchopdebugger.language.psi.impl";

  elementTypeHolderClass = "in.srikanthk.devlabs.kchopdebugger.language.KarateTypes";
  elementTypeClass = "in.srikanthk.devlabs.kchopdebugger.language.KarateElementType";
  tokenTypeClass = "in.srikanthk.devlabs.kchopdebugger.language.KarateTokenType";
}

feature ::= (comment|tags)* FEATURE_KEYWORD description? background? (scenario | scenario_outline)* NEWLINE*

comment ::= COMMENT_STMT

description ::= (line)+

line ::= NEWLINE? (word | WS_KEY)+

tags ::= NEWLINE? TAGS_KEY+

background ::= (comment|tags)* BACKGROUND_KEYWORD description* (step | doc_string | table)*

step ::= comment? (STAR_STEP | GIVEN_STEP | WHEN_STEP | THEN_STEP | AND_STEP | BUT_STEP) line*

scenario ::= (comment|tags)* SCENARIO_KEYWORD description? (step | doc_string | table)*

scenario_outline ::= (comment|tags)* SCENARIO_OUTLINE_KEYWORD description? (step | doc_string | table)* examples

examples ::= comment? EXAMPLES_KEYWORD table*

table    ::= NEWLINE? TABLE_ROW+

doc_string ::= comment? DOC_STRING_START doc_content DOC_STRING_END

doc_content ::= DOC_STRING_CONTENT*

word ::= (WORD_KEY | TABLE_ROW)
